--- a/app/views/uploads/_uploader.html.haml
+++ b/app/views/uploads/_uploader.html.haml
@@ -91,8 +91,9 @@
               });
               data.submit();
             } else
-              $('#uploading_files').append("<p class='uploading_file'>" + file.name + "<br/><img src='../img/uploading.gif'/></p>");
-
+              $.each(data.files, function(index, file) {
+                $('#uploading_files').append("<p class='uploading_file'>" + file.name + "<br/><img src='../img/uploading.gif'/></p>");
+              });
           },
           progress: function (e, data) {
             if( data.files[0].hasOwnProperty('size') ){
