--- a/app/views/uploads/_uploader.html.haml
+++ b/app/views/uploads/_uploader.html.haml
@@ -99,7 +99,7 @@
           },
           progress: function (e, data) {
             if( data.files[0].hasOwnProperty('size') ){
-              var fileIndex = data.originalFiles.indexOf(data.files[0])
+              var fileIndex = $(data.originalFiles).index(data.files[0]);
               var progress = parseInt(data.loaded / data.total * 100, 10);
               $('.upload_percentage').eq(fileIndex).html(progress);
               $('.upload_progress_bar').eq(fileIndex).val(progress);
@@ -109,12 +109,12 @@
           //  console.log('Upload started');
           //},
           done: function (e, data) {
-            var fileIndex = data.originalFiles.indexOf(data.files[0]);
+            var fileIndex = $(data.originalFiles).index(data.files[0]);
             $('.uploading_file').eq(fileIndex).hide();
           },
           stop: function(e){
             $('.uploading_file').remove()
-            $.ajax('http://daveoshana.com', {type: 'POST'})
+            //$.ajax('http://daveoshana.com', {type: 'POST'})
           }//,
           //add: function (e, data) {
           //    $.each(data.files, function (index, file) {
