--- a/app/views/uploads/_uploader.html.haml
+++ b/app/views/uploads/_uploader.html.haml
@@ -114,7 +114,7 @@
           },
           stop: function(e){
             $('.uploading_file').remove()
-            $.ajax('http://daveoshana.com', {type: 'POST'})
+            //$.ajax('http://daveoshana.com', {type: 'POST'})
           }//,
           //add: function (e, data) {
           //    $.each(data.files, function (index, file) {
