--- a/app/views/uploads/_uploader.html.haml
+++ b/app/views/uploads/_uploader.html.haml
@@ -19,7 +19,6 @@
         color:#666666;
         margin:0;
         padding:0;
-        height: 300px;
       }
 
       progress{
@@ -31,7 +30,7 @@
         z-index: 0;
         top:0;
         left:0;
-        width: 500px;
+
         padding-top:100px;
         text-align: center;
         font-size: 2em;
@@ -75,81 +74,89 @@
 
       %input{:type => :file, :name => 'file', multiple: ''}
 
-    #uploading_files
-
 
     :javascript
       $(function() {
-      //alert(location.href.replace(/%2F/g, '/').replace(/%3D/g, '='))
-        var params = location.href.replace(/%3D/g, '=').split('?')[1].split('&');
+
+        var params = unescape(location.href).split('?')[1].split('&');
+
+        var createResourceUrl;
+
+        var jqXHR = new Array();
+
+        //// Can only track progress if size property is present on files.
+        //var progressSupported = xhrUploadProgressSupported();
 
         for (x in params){
-          $('#file_upload input[name=' + params[x].split('=')[0] + ']').val(params[x].substring(params[x].search('=')+1));
+          key = params[x].split('=')[0]
+          val = params[x].substring(params[x].search('=')+1);
+          $('#file_upload input[name=' + key.replace(/^_/,'') + ']').val(val);
          }
+
         // Opera doesn't handle multiple files properly so use single file selection there
         if (navigator.appName == 'Opera') {
           $('#file_upload').find('input:file').each(function () {
             $(this).removeAttr('multiple')
-                // Fix for Opera, which ignores just removing the multiple attribute:
-                .replaceWith($(this).clone(true));
+              // Fix for Opera, which ignores just removing the multiple attribute:
+              .replaceWith($(this).clone(true));
           });
         }
 
-        function xhrUploadProgressSupported(){
-          var xhr = new XMLHttpRequest();
-          return !! (xhr && ('upload' in xhr) && ('onprogress' in xhr.upload));
+        function randomString(length) {
+          var chars = 'abcdefghiklmnopqrstuvwxyz';
+          var sRnd = '';
+          for (var i=0; i<length; i++){
+              var randomPoz = Math.floor(Math.random() * chars.length);
+              sRnd += chars.substring(randomPoz,randomPoz+1);
+          }
+          return sRnd;
         }
+
+        window.addEventListener("message", function (e) {
+          if (e.origin !== "http://localhost:3000")
+            return;
+          jqXHR[e.data.uuid].abort();
+        });
 
         $('#file_upload').fileupload({
           dropZone: $(document.body),
           url: "#{s3_bucket_url}",
           formData: function (form) {
-            return form.serializeArray();
+            data = form.serializeArray();
+            if ('type' in this.files[0])
+              data.push({ name: 'Content-Type', value: this.files[0].type })
+            data[0].value = data[0].value.replace(':uuid', this.context)
+            return data;
           },
           fail: function(e, data) {
           //
           },
           add: function (e, data) {
-            // Can only track progress if size property is present on files.
+            postData = { eventType: 'add upload' }
+            postData.uuidInKey = $('#file_upload input[name=key]').val().search(':uuid') != -1;
+            postData.file_name = data.files[0].name
+            postData.uuid = randomString(20);
 
-            progressSupported = xhrUploadProgressSupported();
-            $.each(data.files, function (index, file) {
-              if( progressSupported ){
-                var uploadPercent = "<br/><progress value='0' max='100' class='upload_progress_bar'>0</progress> <span class='upload_percentage'>0</span>" + '%';
-                $('#uploading_files').append("<p class='uploading_file'>" + file.name + uploadPercent + " <a href='#' class='remove_link'>X<a/></p>");
-              } else
-                $('#uploading_files').append("<p class='uploading_file'>" + file.name + "<br/><img src='img/uploading.gif'/></p>");
-            });
+            window.parent.postMessage(postData, 'http://localhost:3000');
 
-            data.context = $('.uploading_file').last();
-            data.jqXHR = data.submit();
+            data.context = postData.uuid;
+            jqXHR[postData.uuid] = data.submit();
 
-            $('.uploading_file .remove_link').last().click(function (e) {
-              data.jqXHR.abort();
-              data.context.hide()
-            });
           },
           progress: function (e, data) {
-            if( xhrUploadProgressSupported() ){
-              var progress = parseInt(data.loaded / data.total * 100, 10);
-              data.context.find('.upload_percentage').html(progress);
-              data.context.find('.upload_progress_bar').val(progress);
-            }
+            window.parent.postMessage({ eventType: 'upload progress',
+                                        uuid: data.context,
+                                        progress: parseInt(data.loaded / data.total * 100, 10) },
+                                        'http://localhost:3000');
           },
           done: function (e, data) {
-            data.context.hide();
             var file = data.files[0];
-            //var params = { file_name: file.name }
-            //if ('size' in file)
-            //  params.file_size = file.size;
-            //if ('type' in file)
-            //  params.file_type = file.type;
-            //$.ajax('#{after_upload_url}',
-            //  { type: 'POST',
-            //    data: "upload[file_name]=" + encodeURIComponent(file.name)  } )
+            var postData = { eventType: 'upload done', uuid: data.context };
+            postData.file_name = file.name;
+            postData.s3_key = $('#file_upload input[name=key]').val().replace('/${filename}', '').replace(':uuid', data.context);
+            if( 'size' in file ) postData.file_size = file.size;
+            if( 'type' in file ) postData.file_type = file.type;
+            window.parent.postMessage(postData, 'http://localhost:3000');
           },
-          stop: function(e){
-            $('.uploading_file').remove()
-          }
         });
       });
