--- a/app/views/uploads/_uploader.html.haml
+++ b/app/views/uploads/_uploader.html.haml
@@ -84,6 +84,8 @@
 
         var jqXHR = new Array();
 
+        var host = 'http://html5-s3-uploader.herokuapp.com'; //'http://localhost:3000'
+
         //// Can only track progress if size property is present on files.
         //var progressSupported = xhrUploadProgressSupported();
 
@@ -113,7 +115,7 @@
         }
 
         window.addEventListener("message", function (e) {
-          if (e.origin !== "http://localhost:3000")
+          if (e.origin !== host)
             return;
           jqXHR[e.data.uuid].abort();
         });
@@ -137,7 +139,7 @@
             postData.file_name = data.files[0].name
             postData.uuid = randomString(20);
 
-            window.parent.postMessage(postData, 'http://localhost:3000');
+            window.parent.postMessage(postData, host);
 
             data.context = postData.uuid;
             jqXHR[postData.uuid] = data.submit();
@@ -147,7 +149,7 @@
             window.parent.postMessage({ eventType: 'upload progress',
                                         uuid: data.context,
                                         progress: parseInt(data.loaded / data.total * 100, 10) },
-                                        'http://localhost:3000');
+                                        host);
           },
           done: function (e, data) {
             var file = data.files[0];
@@ -156,7 +158,7 @@
             postData.s3_key = $('#file_upload input[name=key]').val().replace('/${filename}', '').replace(':uuid', data.context);
             if( 'size' in file ) postData.file_size = file.size;
             if( 'type' in file ) postData.file_type = file.type;
-            window.parent.postMessage(postData, 'http://localhost:3000');
+            window.parent.postMessage(postData, host);
           },
         });
       });
