removed ssl for now, bigger uploads hang and also make chrome hang

--- a/app/assets/javascripts/uploads.js.coffee.erb
+++ b/app/assets/javascripts/uploads.js.coffee.erb
@@ -1,6 +1,6 @@
 jQuery ->
 
-  uploaderHost = "https://s3.amazonaws.com"
+  uploaderHost = "http://s3.amazonaws.com"
 
   xhrUploadProgressSupported = () ->
     xhr = new XMLHttpRequest()
